[package]
name = "diesel-crud"
version = "0.1.0"
authors = ["Geordon Worley <Geordon.Worley@leidos.com>"]
edition = "2018"
description = "Perscriptive Diesel CRUD and connection pool management"
documentation = "https://docs.rs/diesel-crud/"
repository = "https://github.com/vadixidav/diesel-crud"
keywords = ["crud", "diesel", "rest"]
categories = ["web-programming::http-server"]
license = "MIT"
readme = "README.md"

[dependencies]
diesel = { version = "1.4.3", default-features = false, features = ["r2d2"] }
failure = "0.1.6"
dotenv = "0.15.0"
derive_more = "0.99.3"
r2d2 = "0.8.8"
